--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && firebase deploy --project dev",
+    "deploy-prod": "npm run build && firebase deploy --project prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
