--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # production
 /build
 
+
 # misc
 .DS_Store
 .env.local
@@ -28,4 +29,11 @@ yarn-error.log*
 #ignoring videos
 /src/assets/video*
 /src/assets/imgContact/videoDrone.mp4
+
+#security
+/src/containers/Contact/apikeys.js
+.firebaserc
+/.firebase
+
+
 
